--- a/debug/package.json
+++ b/debug/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GitHubAppRestRequest",
+  "name": "node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/auth-app": "^4.0.4",
-    "axios": "^0.27.2",
-    "azure-pipelines-task-lib": "^4.0.0-preview",
     "octokit": "^2.0.5"
   },
   "devDependencies": {
